
message MessageWithMap {
  map<int32, string> name_mapping = 1;
  map<sint64, FloatingPoint> msg_mapping = 2;
  map<bool, bytes> byte_mapping = 3;
}

message FloatingPoint {
  double f = 1;
}

message Uint128Pair {
    bytes left = 1 [ (gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/nourish/protobuf/test/custom.Uint128" ];
    bytes right = 2 [ (gogoproto.customtype) = "github.com/nourish/protobuf/test/custom.Uint128" ];
}
